<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.codix.tools</groupId>
    <artifactId>jira-reporter</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <poi.version>5.2.5</poi.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.18.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${poi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${poi.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.20.0</version>
        </dependency>
        
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.20.0</version>
        </dependency>
        

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>make-duplicate-theme-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>DASHBOARD_CLEANUP</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <archive>
                                <manifest>
                                    <mainClass>com.codix.tools.internalreport.DuplicateThemeReportApp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>

                    <execution>
                        <id>make-jira-report-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>DASHBOARD_COPROJ</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <archive>
                                <manifest>
                                    <mainClass>com.codix.tools.locamreport.JiraReportApp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>

                    <execution>
                        <id>make-resource-planning-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>DASHBOARD_BTTEAM</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <archive>
                                <manifest>
                                    <mainClass>com.codix.tools.btteamreport.ResourcePlanningApp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                    
                    <execution>
                        <id>make-resource-management-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>DASHBOARD_MANAGEMENT</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <archive>
                                <manifest>
                                    <mainClass>com.codix.tools.management.JiraDownloader</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>organize-deliverables</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <echo message="Organisation des repertoires et generation des scripts .bat..."/>
                    
                                <macrodef name="setup-tool">
                                    <attribute name="jarname"/>
                                    <sequential>
                                        <local name="dir.path"/>
                                        <property name="dir.path" value="${project.build.directory}/@{jarname}"/>
                            
                                        <mkdir dir="${dir.path}"/>
                            
                                        <copy todir="${dir.path}" failonerror="false">
                                            <fileset dir="${project.build.directory}">
                                                <include name="@{jarname}.jar"/>
                                            </fileset>
                                        </copy>
                            
                                        <copy file="${project.basedir}/config.properties" todir="${dir.path}" failonerror="false"/>
                            
                                        <echo file="${dir.path}/run_@{jarname}.bat" encoding="UTF-8">@echo off
                                            REM Force la page de code UTF-8 pour les accents
                                            chcp 65001 >nul

                                            cd /d "%~dp0"

                                            REM Lance le jar avec l'encodage UTF-8 force
                                            java.exe -Dfile.encoding=UTF-8 -jar @{jarname}.jar

                                            echo.
                                            echo ---------------------------------------------------
                                            echo Traitement termine. Vous pouvez fermer cette fenetre.
                                            pause</echo>
                                    </sequential>
                                </macrodef>

                                <setup-tool jarname="DASHBOARD_COPROJ"/>
                                <setup-tool jarname="DASHBOARD_BTTEAM"/>
                                <setup-tool jarname="DASHBOARD_CLEANUP"/>
                                <setup-tool jarname="DASHBOARD_MANAGEMENT"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>